--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
-    "busboy": "^1.5.0",
+    "busboy": "^1.6.0",
+    "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
