--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "algoliasearch": "^4.13.1",
     "busboy": "^1.6.0",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.20.1",
+    "firebase-functions": "^3.21.2",
     "qrcode": "^1.5.0",
     "query-string": "^7.1.1",
     "slugify": "^1.6.5"
