--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
-    "serve": "NODE_ENV=development firebase emulators:start",
+    "serve": "NODE_ENV=development FIRESTORE_EMULATOR_HOST=localhost:8080 firebase emulators:start ",
     "shell": "firebase functions:shell",
     "start": "NODE_ENV=production npm run shell",
     "deploy": "NODE_ENV=production firebase deploy --only functions",
@@ -24,19 +24,23 @@
     "express-async-errors": "^3.1.1",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.21.2",
+    "firebase-functions": "^3.23.0",
     "qrcode": "^1.5.0",
     "query-string": "^7.1.1",
     "read-excel-file": "^5.3.5",
+    "sharp": "^0.31.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^2.0.4",
+    "@firebase/testing": "^0.20.11",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.3.2",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1"
   },
   "private": true
 }
