--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-node_modules/
 .env
-firebase-debug.log
-ui-debug.log
 .DS_Store
+node_modules
+firebase-debug.log
+pubsub-debug.log
+ui-debug.log
 service-account-file.json
+database-debug.log
+
+Restaurants-List-Mockup.xlsx
+firestore-debug.log
+.DS_Store
+.gitignore
