--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "algoliasearch": "^4.13.1",
     "busboy": "^1.6.0",
+    "csv": "^6.2.5",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
